--- a/index.html
+++ b/index.html
@@ -50,5 +50,24 @@
             </section>
         </main>
         </div>
+        <div>
+            <main>
+                <header>
+                    <h1 class="name">Piceda</h1>
+                </header>
+                <section class="data">
+                    <img class="data__photo" src="./img/Diglett.png" alt="Snorlax">
+                    <div class="data__letters">
+                            
+                        Tipo: Topo<br>
+                        Color: Anaranjado <br>
+                        Altura: 0.2m <br>
+                        Peso: 60kg <br>
+                        Habilidad: pegarle a flesqui
+                    </div>
+                   
+                </section>
+            </main>
+            </div>
 </body>
 </html>
