--- a/index.html
+++ b/index.html
@@ -69,5 +69,24 @@
                 </section>
             </main>
             </div>
+            <div>
+                <main>
+                    <header>
+                        <h1 class="name">Flesqui</h1>
+                    </header>
+                    <section class="data">
+                        <img class="data__photo" src="./img/slowpoke.png" alt="Snorlax">
+                        <div class="data__letters">
+                                
+                            Tipo: Atontado<br>
+                            Color: Rosa <br>
+                            Altura: 1.6m <br>
+                            Peso: 90kg <br>
+                            Habilidad: Hacer show
+                        </div>
+                       
+                    </section>
+                </main>
+                </div>
 </body>
 </html>
