--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
           </div>
         </section>
       </div>
+      <div class="card">
+        <header>
+          <h1 class="name">Adriel</h1>
+        </header>
+        <section class="data">
+          <img class="data__photo" src="./img/Buneary.png" alt="Snorlax" />
+          <div class="data__letters">
+            Tipito: Gay<br />
+            Color: lgbt+ <br />
+            Altura: 1.8m <br />
+            Peso: 60kg <br />
+            Habilidad: pegarte su forma de hablar
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
