cambios en descripcion de pedro

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="container">
       <div class="tittle">
-        <h1>The Terere Gang</h1>
+        <h1>The Pedro Gang</h1>
       </div>
 
       <div class="card">
@@ -37,10 +37,10 @@
           <img class="data__photo" src="./img/Machamp.png" alt="Snorlax" />
           <div class="data__letters">
             Tipo: Lucha<br />
-            Color: La tanga de tu señora <br />
+            Color: azul <br />
             Altura: 1.8m <br />
             Peso: 130kg <br />
-            Habilidad: bardear por tu señora
+            Habilidad: desarrollo web
           </div>
         </section>
       </div>
