add delfi and changes pedro's info

--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
           </div>
         </section>
       </div>
+      <div class="card">
+        <header>
+          <h1 class="name">Delfina</h1>
+        </header>
+        <section class="data">
+          <img class="data__photo" src="./img/jigglypuff.png" alt="Snorlax" />
+          <div class="data__letters">
+            Tipo: Drogadicta<br />
+            Color: rosada <br />
+            Altura: 1.2m <br />
+            Peso: 50kg <br />
+            Habilidad: insitarte a drogarte
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
