changes delfina's info

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             Color: rosada <br />
             Altura: 1.2m <br />
             Peso: 50kg <br />
-            Habilidad: insitarte a drogarte
+            Habilidad: fumar puchos de hombre
           </div>
         </section>
       </div>
