add mole y mami

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terere Gangh</title>
+    <title>The Pedro Gang</title>
     <link rel="stylesheet" href="./syle.css" />
   </head>
   <body>
@@ -12,7 +12,36 @@
       <div class="tittle">
         <h1>The Pedro Gang</h1>
       </div>
-
+      <div class="card">
+        <header>
+          <h1 class="name">Mole</h1>
+        </header>
+        <section class="data">
+          <img class="data__photo" src="./img/mole.png" alt="Snorlax" />
+          <div class="data__letters">
+            Tipo: Gato<br />
+            Color: Blanco <br />
+            Altura: 0.4m <br />
+            Peso: 20kg <br />
+            Habilidad: rasguñarte la cara y ser un pesado
+          </div>
+        </section>
+      </div>
+      <div class="card">
+        <header>
+          <h1 class="name">Mami</h1>
+        </header>
+        <section class="data">
+          <img class="data__photo" src="./img/mami.jpg" alt="Snorlax" />
+          <div class="data__letters">
+            Tipo: La mas linda<br />
+            Color: rubia <br />
+            Altura: 1.2m <br />
+            Peso: 50kg <br />
+            Habilidad: mirar tiktok todo el dia
+          </div>
+        </section>
+      </div>
       <div class="card">
         <header>
           <h1 class="name">Chino</h1>
@@ -119,6 +148,7 @@
           </div>
         </section>
       </div>
+
     </main>
   </body>
 </html>
